# 2d-line-of-sight

./: .gitignore  Cargo.toml  README.md
benches/: comparisons.rs
book/: book.toml
book/book/: 404.html  Angle.html  Final.html  Intersection.html  Introduction.html  Problem.html  Rays.html  index.html  print.html  searchindex.js  searchindex.json
book/docs/: Problem.html  print.html  searchindex.js
book/src/: Angle.md  Final.md  Introduction.md  Problem.md  Rays.md  SUMMARY.md
docs/: Angle.html  Final.html  Introduction.html  Problem.html  Rays.html  index.html  print.html  searchindex.js  searchindex.json
src/: main.rs  sight.rs  space.rs
